--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Forty by HTML5 UP</title>
+		<title>Home-SennerWang</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Yusen Wang</strong> <span>by HTML5 UP</span></a>
+						<a href="index.html" class="logo"><strong>Yusen Wang</strong> <span>Senner</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -43,11 +43,13 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Hi, my name is Forty</h1>
+								<h1>Yusen Wang</h1>
 							</header>
 							<div class="content">
-								<p>A responsive site template designed by HTML5 UP<br />
-								and released under the Creative Commons.</p>
+								<p>I'm a PhD Candidate at School of Physics,Peking University.<br />
+								My speciality is HEDP,and I'm interested in QED effect in strong field.<br />
+								I would appreciate to share some works, course notes, music reviews and<br />
+								life-shortcuts here, check them out!</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Get Started</a></li>
 								</ul>
