--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 							<div class="content">
 								<p>I'm a PhD Candidate at School of Physics,Peking University.<br />
 								My speciality is HEDP,and I'm interested in QED effect in strong field.<br />
-								I would appreciate to share some works, course notes, music reviews and<br />
-								life-shortcuts here, check them out!</p>
+								I would appreciate to share some works, course notes, music reviews<br />
+								and life-shortcuts here, check them out!</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Get Started</a></li>
 								</ul>
