--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing1.html" class="link">Introduction</a></h3>
-										<p>Learn Something about Me</p>
+										<p>Learn more about Me</p>
 									</header>
 								</article>
 								<article>
@@ -76,8 +76,8 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing2.html" class="link">Scientific Research</a></h3>
-										<p>Here are some research progress and related work</p>
+										<h3><a href="landing2.html" class="link">Scientific Works</a></h3>
+										<p>Here are some research progress and related works</p>
 									</header>
 								</article>
 								<article>
@@ -85,8 +85,8 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Magna</a></h3>
-										<p>Lorem etiam nullam</p>
+										<h3><a href="landing.html" class="link">Course Notes</a></h3>
+										<p>Here presents the lesson notes that I take about some courses I had since undergraduate period.</p>
 									</header>
 								</article>
 								<article>
@@ -94,8 +94,9 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Ipsum</a></h3>
-										<p>Nisl sed aliquam</p>
+										<h3><a href="landing.html" class="link">Musical Column</a></h3>
+										<p>Here you will see everthing about my personal music taste,<br /> 
+										including music reviews, annual summaries and appreciation of vinyls, etc.</p>
 									</header>
 								</article>
 								<article>
@@ -103,8 +104,8 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Consequat</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<h3><a href="landing.html" class="link">Articles & Essays</a></h3>
+										<p>Here are some essays that I wrote which marked down my thougts and experiences.</p>
 									</header>
 								</article>
 								<article>
@@ -112,8 +113,8 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Etiam</a></h3>
-										<p>Feugiat amet tempus</p>
+										<h3><a href="landing.html" class="link">Photos</a></h3>
+										<p>The album containing life photos which is a precious record of my life.</p>
 									</header>
 								</article>
 							</section>
