--- a/index.html
+++ b/index.html
@@ -29,13 +29,15 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="landing.html">Introduction</a></li>
+							<li><a href="generic.html">Scientific Works</a></li>
+							<li><a href="elements.html">Course Notes</a></li>
+							<li><a href="elements.html">Musical Column</a></li>
+							<li><a href="elements.html">Essays</a></li>
+							<li><a href="elements.html">Photos</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
 						</ul>
 					</nav>
 
@@ -47,7 +49,6 @@
 							</header>
 							<div class="content">
 								<p>I'm a PhD Candidate at School of Physics,Peking University.<br />
-								My speciality is HEDP,and I'm interested in QED effect in strong field.<br />
 								I would appreciate to share some works, course notes, music reviews<br />
 								and life-shortcuts here, check them out!</p>
 								<ul class="actions">
@@ -64,57 +65,57 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/pic1.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing1.html" class="link">Introduction</a></h3>
+										<h3><a href="landing11.html" class="link">Introduction</a></h3>
 										<p>Learn more about Me</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/pic2.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing2.html" class="link">Scientific Works</a></h3>
-										<p>Here are some research progress and related works</p>
+										<h3><a href="landing22.html" class="link">Scientific Works</a></h3>
+										<p>Here are some progress on my research and related works</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/pic3.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Course Notes</a></h3>
-										<p>Here presents the lesson notes that I take about some courses I had since undergraduate period.</p>
+										<p>Here presents the lesson notes about some courses that I took since undergraduate period</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/pic4.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Musical Column</a></h3>
 										<p>Here you will see everthing about my personal music taste,<br /> 
-										including music reviews, annual summaries and appreciation of vinyls, etc.</p>
+										including music reviews, annual summaries and appreciation of vinyls, etc</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+										<img src="images/pic5.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Articles & Essays</a></h3>
-										<p>Here are some essays that I wrote which marked down my thougts and experiences.</p>
+										<h3><a href="landing.html" class="link">Essays</a></h3>
+										<p>Here are some essays that I wrote which marked down my thougts and experiences</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
+										<img src="images/pic6.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Photos</a></h3>
-										<p>The album containing life photos which is a precious record of my life.</p>
+										<p>This album contains life photos which are precious record of my life</p>
 									</header>
 								</article>
 							</section>
@@ -125,7 +126,7 @@
 									<header class="major">
 										<h2>Welcome!</h2>
 									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
+									<p>If you have anything to say or have the intention to collaborate with me, please feel free to contect me anytime!</p>
 									<ul class="actions">
 										<li><a href="landing.html" class="button next">Get Started</a></li>
 									</ul>
@@ -198,7 +199,7 @@
 								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Copyright:SennerWang</li><!--<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>-->
 							</ul>
 						</div>
 					</footer>
