--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Introduction</a></li>
-							<li><a href="generic.html">Scientific Works</a></li>
-							<li><a href="elements.html">Course Notes</a></li>
-							<li><a href="elements.html">Musical Column</a></li>
-							<li><a href="elements.html">Essays</a></li>
-							<li><a href="elements.html">Photos</a></li>
+							<li><a href="Instruction.html">Introduction</a></li>
+							<li><a href="scientific works/homepage.html">Scientific Works</a></li>
+							<li><a href="course notes/homepage.html">Course Notes</a></li>
+							<li><a href="musical column/homepage.html">Musical Column</a></li>
+							<li><a href="essays/homepage.html">Essays</a></li>
+							<li><a href="photos/homepage.html">Photos</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Get Started</a></li>
@@ -105,7 +105,7 @@
 										<img src="images/pic5.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Essays</a></h3>
+										<h3><a href="essays/homepage.html" class="link">Essays</a></h3>
 										<p>Here are some essays that I wrote which marked down my thougts and experiences</p>
 									</header>
 								</article>
