--- a/course notes/homepage.html
+++ b/course notes/homepage.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Home-SennerWang</title>
+		<title>Course notes</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,8 +18,9 @@
 			<div id="wrapper">
 
 				<!-- Header -->
-					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Yusen Wang</strong> <span>Senner</span></a>
+				<!-- Note: The "styleN" class below should match that of the banner element. -->
+					<header id="header" class="alt style2">
+						<a href="../index.html" class="logo"><strong>Yusen Wang</strong> <span>Senner</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -28,13 +29,13 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="Instruction.html">Introduction</a></li>
-							<li><a href="scientific works/homepage.html">Scientific Works</a></li>
-							<li><a href="course notes/homepage.html">Course Notes</a></li>
-							<li><a href="musical column/homepage.html">Musical Column</a></li>
-							<li><a href="essays/homepage.html">Essays</a></li>
-							<li><a href="photos/homepage.html">Photos</a></li>
+							<li><a href="../index.html">Home</a></li>
+							<li><a href="../Instruction.html">Introduction</a></li>
+							<li><a href="../scientific works/homepage.html">Scientific Works</a></li>
+							<li><a href="../course notes/homepage.html">Course Notes</a></li>
+							<li><a href="../musical column/homepage.html">Musical Column</a></li>
+							<li><a href="../essays/homepage.html">Essays</a></li>
+							<li><a href="../photos/homepage.html">Photos</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Get Started</a></li>
@@ -42,18 +43,17 @@
 					</nav>
 
 				<!-- Banner -->
-					<section id="banner" class="major">
+				<!-- Note: The "styleN" class below should match that of the header element. -->
+					<section id="banner" class="style2">
 						<div class="inner">
+							<span class="image">
+								<img src="../images/pic3.jpg" alt="" />
+							</span>
 							<header class="major">
-								<h1>Yusen Wang</h1>
+								<h1>Course Notes</h1>
 							</header>
 							<div class="content">
-								<p>I'm a PhD Candidate at School of Physics,Peking University.<br />
-								I would appreciate to share some works, course notes, music reviews<br />
-								and life-shortcuts here, check them out!</p>
-								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">Get Started</a></li>
-								</ul>
+								<p>Here presents the lesson notes about some courses that I took since undergraduate period</p>
 							</div>
 						</div>
 					</section>
@@ -62,76 +62,48 @@
 					<div id="main">
 
 						<!-- One -->
-							<section id="one" class="tiles">
-								<article>
-									<span class="image">
-										<img src="images/pic1.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing11.html" class="link">Introduction</a></h3>
-										<p>Learn more about Me</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic2.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing22.html" class="link">Scientific Works</a></h3>
-										<p>Here are some progress on my research and related works</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic3.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="course notes/homepage.html" class="link">Course Notes</a></h3>
-										<p>Here presents the lesson notes about some courses that I took since undergraduate period</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic4.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Musical Column</a></h3>
-										<p>Here you will see everthing about my personal music taste,<br /> 
-										including music reviews, annual summaries and appreciation of vinyls, etc</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic5.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="essays/homepage.html" class="link">Essays</a></h3>
-										<p>Here are some essays that I wrote which marked down my thougts and experiences</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic6.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Photos</a></h3>
-										<p>This album contains life photos which are precious record of my life</p>
-									</header>
-								</article>
-							</section>
+						<section id="one">
+							<div class="inner">
+								<header class="major">
+									<h2>Course Lists  课程目录</h2>
+								</header>
+									<!-- Content -->
+									<div class="row">
+										<div class="col-6 col-12-small">
+											<h3>mathematics</h3>
+											<ul>
+												<li>Prabability Theory & Mathematical Statisics<br />概率论与数理统计</li>
+												<li>Computational Method<br />计算方法</li>
+												<li>Mathematical Physical Equation<br />数学物理方程</li>
+											</ul>
+											<h3>Physics</h3>
+											<ul>
+												<li>Artificial Circuit<br />模拟电路</li>
+												<li>Digital Logic Circuit<br />数字逻辑电路</li>
+												<li>Atomic Physics<br />原子物理</li>
+												<li>Mordern Optics<br />近代光学</li>
+												<li>Theoretical Mechanics<br />理论力学</li>
+												<li>Electrodynamics<br />电动力学</li>
+											</ul>
+										</div>
+										<div class="col-6 col-12-small">
+											<ul>
+												<li>Quantum Mechanics<br />量子力学</li>
+												<li>Thermodynamics & Statistical Physics<br />热力学与统计物理</li>
+												<li>Solid State Physics<br />固体物理</li>
+												<li>Cold Atom Physics<br />冷原子物理</li>
+												<li><a href="#">Principle of Laser<br />激光原理</a></li>
+												<li>Advanced Quantum Mechanics<br />高等量子力学</li>
+												<li>Introduction to Quantum Information<br />量子信息导论</li>
+												<li>Quantum Field Theory<br />量子场论</li>
+												<li>Quantum Statistical Mechanics<br />量子统计力学</li>
+											</ul>
+										</div>
+									</div>
 
-						<!-- Two -->
-							<section id="two">
-								<div class="inner">
-									<header class="major">
-										<h2>Welcome!</h2>
-									</header>
-									<p>If you have anything to say or have the intention to collaborate with me, please feel free to contect me anytime!</p>
-									<ul class="actions">
-										<li><a href="landing.html" class="button next">Get Started</a></li>
-									</ul>
-								</div>
-							</section>
+								<hr class="major" />
+							</div>
+						</section>
 
 					</div>
 
