--- a/essays/homepage.html
+++ b/essays/homepage.html
@@ -140,7 +140,7 @@
 
 							<section id="two" class="spotlights">
 								<section>
-									<a href="changshaxing.html" class="image">
+									<a href="xiezaibiyeqianxi.html" class="image">
 										<br />
 										<img src="images/pic01.jpg" alt="" data-position="center center" />
 										<br />
@@ -148,18 +148,18 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h2>长沙行</h2>
-												<h3>2022.8.10</h3>
+												<h2>写在毕业前夕</h2>
+												<h3>2023.6.16</h3>
 											</header>
-											<p>没完没了的疫情将人困在了南方。回家之前临时兴起，看了看高德地图上周围还没有去过的地方，决定跑一趟长沙。起初心心念念想来长沙其实只是为了过把嘴瘾：当然这种游历吃喝的旅行和别人一起或许能更有意趣。不想如今条件限制，该死的疫情打乱了整个假期计划。为了不给别人再添麻烦，也就一人动身启程了。决定的当天买了高铁票，思索再三定了个稍微上档次的酒店决定去体验一番...</p>
+											<p>人一生会经历几次毕业呢？随着年岁的增长，过去四年习以为常的日子最终也只成了个人简历上简简单单的一行字。常说一切的过去都成就了今天的我，但如今的我又会在无数个独自的夜晚幻想回到十年前再重新经历一遍过去。无论是走在兰州的大街小巷亦或是在科大的校园中，我总是在努力回忆着在何时此地曾为什么而匆匆忙忙。如果不是毕业这样的节点，或许我们也不会花时间来审视自己，想想曾错过些什么。每每临近这些特定的时刻，我们却只能暗自叹息：又是三年、又是四年。光阴如梭向来不是空穴来风，好像昨天我才拿着录取通知书在弘毅院门口，期待着大学的生活......</p>
 											<ul class="actions">
-												<li><a href="changshaxing.html" class="button">Learn more 阅读</a></li>
+												<li><a href="xiezaibiyeqianxi.html" class="button">Learn more 阅读</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
-									<a href="changshaxing.html" class="image">
+									<a href="yibaoyanzhilu.html" class="image">
 										<br />
 										<img src="images/pic01.jpg" alt="" data-position="center center" />
 										<br />
@@ -167,12 +167,12 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h2>长沙行</h2>
-												<h3>2022.8.10</h3>
+												<h2>忆保研之路</h2>
+												<h3>2022.6.20</h3>
 											</header>
-											<p>没完没了的疫情将人困在了南方。回家之前临时兴起，看了看高德地图上周围还没有去过的地方，决定跑一趟长沙。起初心心念念想来长沙其实只是为了过把嘴瘾：当然这种游历吃喝的旅行和别人一起或许能更有意趣。不想如今条件限制，该死的疫情打乱了整个假期计划。为了不给别人再添麻烦，也就一人动身启程了。决定的当天买了高铁票，思索再三定了个稍微上档次的酒店决定去体验一番...</p>
+											<p>当我发出这条消息的时候，我的保研之旅也来到了终点。本来在想，等一切结束了要把所有想到的体会到的一一写出来，但当结果尘埃落定之时却感觉一时语塞不知从何说起，直至今日。 至今都在感叹究竟是在怎样的焦虑、惶恐和担忧中度过过去的四个月。...</p>
 											<ul class="actions">
-												<li><a href="changshaxing.html" class="button">Learn more 阅读</a></li>
+												<li><a href="yibaoyanzhilu.html" class="button">Learn more 阅读</a></li>
 											</ul>
 										</div>
 									</div>
@@ -183,13 +183,13 @@
 								<div class="inner">
 								<h3>Retrospect 旧作回顾</h3>
 									<dl>
-										<dt>长沙行（2022.8.10）</dt>
+										<dt>写在毕业前夕（2023.6.16）</dt>
 										<dd>
-											<p><a href="changshaxing.html">没完没了的疫情将人困在了南方。回家之前临时兴起，看了看高德地图上周围还没有去过的地方，决定跑一趟长沙...</a></p>
+											<p><a href="xiezaibiyeqianxi.html">人一生会经历几次毕业呢？随着年岁的增长，过去四年习以为常的日子最终也只成了个人简历上简简单单的一行字...</a></p>
 										</dd>
-										<dt>登山记（2021.9.12）</dt>
+										<dt>忆保研之路（2022.6.20）</dt>
 										<dd>
-											<p><a href="dengshanji.html">也许是自小成长在两山相夹的沿河城市的缘故，登高的回忆充斥着童年、少年，一直到现在的青年时光。好似兰州人的生活和休闲场景已经牢牢和山、和水绑定在一起...</a></p>
+											<p><a href="yibaoyanzhilu.html">当我发出这条消息的时候，我的保研之旅也来到了终点。本来在想，等一切结束了要把所有想到的体会到的一一写出来...</a></p>
 										</dd>
 									</dl>
 								</div>
