--- a/musical column/homepage.html
+++ b/musical column/homepage.html
@@ -143,7 +143,7 @@
 								<div class="inner">
 									<header class="major">
 										<h2>Retrospection on released work   旧作回顾</h2>
-										<h3>Every week I took a retrospection on classic works released in the past, which have great influence or impaction</h3>
+										<h3>Every week I take a retrospection on classic works released in the past, which have great influence or impaction</h3>
 									</header>
 								</div>
 							</section>
