--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 										<img src="images/pic4.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Musical Column</a></h3>
+										<h3><a href="musical column/homepage.html" class="link">Musical Column</a></h3>
 										<p>Here you will see everthing about my personal music taste,<br /> 
 										including music reviews, annual summaries and appreciation of vinyls, etc</p>
 									</header>
