--- a/musical column/homepage.html
+++ b/musical column/homepage.html
@@ -67,8 +67,8 @@
 							<section id="one" >
 								<div class="inner">
 									<header class="major">
-										<h2>Appreciation of New Music   新作赏析</h2>
-										<h3>Music that released this year will be seen here</h3>
+										<h2>Appreciation of New Music</h2>
+										<h3> 新作赏析</h3>
 									</header>
 								</div>
 							</section>
@@ -142,8 +142,8 @@
 							<section id="two" >
 								<div class="inner">
 									<header class="major">
-										<h2>Retrospection on released work   旧作回顾</h2>
-										<h3>Every week I take a retrospection on classic works released in the past, which have great influence or impaction</h3>
+										<h2>Retrospection on released work</h2>
+										<h3>旧作回顾</h3>
 									</header>
 								</div>
 							</section>
