--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 										<img src="images/pic6.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Album</a></h3>
+										<h3><a href="Album/homepage.html" class="link">Album</a></h3>
 										<p>Photos & Videos</p>
 									</header>
 								</article>
