--- a/Album/homepage.html
+++ b/Album/homepage.html
@@ -133,10 +133,10 @@
 									</br>
 									<div class="box alt">
 										<div class="row gtr-50 gtr-uniform">
-										
+											<div class="col-12">
 											<video controls="controls">
 											<source src="images/WeChat_20240121152453.mp4" type="video/mp4"></source></video>
-											 
+										</div>	 
 
 
 										</div>
