--- a/Album/homepage.html
+++ b/Album/homepage.html
@@ -132,13 +132,9 @@
 									<summary class="major"><a>2023.12 月度总结</a></summary>
 									</br>
 									<div class="box alt">
-										<div class="row gtr-50 gtr-uniform">
-											<div class="col-12">
-											<video controls="controls">
-											<source src="images/WeChat_20240121152453.mp4" type="video/mp4"></source></video>
-										</div>	 
-
-
+										<div class="row gtr-50 gtr-uniform">										
+											<video controls="controls" poster="images\t3.jpg">
+											<source src="images/WeChat_20240121152453.mp4" type="video/mp4"></source></video>											 
 										</div>
 									</div>
 								
