--- a/musical column/homepage.html
+++ b/musical column/homepage.html
@@ -1,47 +1,39 @@
 <!DOCTYPE HTML>
-<!--
-	Forty by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Musical Column</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="../assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
 		<!-- Wrapper -->
 			<div id="wrapper">
 
-				<!-- Header -->
-				<!-- Note: The "styleN" class below should match that of the banner element. -->
-					<header id="header" class="alt style2">
-						<a href="../index.html" class="logo"><strong>Yusen Wang</strong> <span>Senner</span></a>
-						<nav>
-							<a href="#menu">Menu</a>
-						</nav>
-					</header>
+				<header id="header" class="alt style2">
+					<a href="../index.html" class="logo"><strong>Yusen Wang</strong> <span>Home</span></a>
+					<nav>
+						<a href="#menu">Menu</a>
+					</nav>
+				</header>
 
 				<!-- Menu -->
-					<nav id="menu">
-						<ul class="links">
-							<li><a href="../index.html">Home</a></li>
-							<li><a href="../Instruction.html">Introduction</a></li>
-							<li><a href="../scientific works/homepage.html">Scientific Works</a></li>
-							<li><a href="../course notes/homepage.html">Course Notes</a></li>
-							<li><a href="../musical column/homepage.html">Musical Column</a></li>
-							<li><a href="../essays/homepage.html">Essays</a></li>
-							<li><a href="../photos&videos/homepage.html">Photos & Videos</a></li>
-						</ul>
-						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Get Started</a></li>
-						</ul>
-					</nav>
-
+				<nav id="menu">
+					<ul class="links">
+						<li><a href="../index.html">Home</a></li>
+						<li><a href="../Instruction.html">Introduction</a></li>
+						<li><a href="../Scientific Works/homepage.html">Scientific Works</a></li>
+						<li><a href="../Notes/homepage.html">Notes</a></li>
+						<li><a href="../Musical Column/homepage.html">Musical Column</a></li>
+						<li><a href="../Journal Entries/homepage.html">Journal Entries</a></li>
+						<li><a href="../Album/homepage.html">Album</a></li>
+					</ul>
+					<ul class="actions stacked">
+						<li><a href="#" class="button primary fit">Get Started</a></li>
+					</ul>
+				</nav>
 	
 				<!-- Banner -->
 				<!-- Note: The "styleN" class below should match that of the header element. -->
@@ -54,128 +46,202 @@
 								<h1>Musical Column</h1>
 							</header>
 							<div class="content">
-								<p>Here you will see everthing about my personal music taste,<br /> 
-								including music reviews, annual summaries and appreciation of vinyls, etc</p>
+								<p>Personal music reviews, annual summaries and appreciation of vinyls, etc</p>
 							</div>
 						</div>
 					</section>
 
 				<!-- Main -->
 					<div id="main">
-
 						<!-- One -->
-						<section id="one" class="tiles">
-							<article>
-								<span class="image">
-									<img src="images/pic1.jpg" alt="" />
-								</span>
-								<header class="major">
-									<h3><a href="landing11.html" class="link">Introduction</a></h3>
-									<p>Learn more about Me</p>
-								</header>
-							</article>
-							<article>
-								<span class="image">
-									<img src="images/pic2.jpg" alt="" />
-								</span>
-								<header class="major">
-									<h3><a href="landing22.html" class="link">Scientific Works</a></h3>
-									<p>Here are some progress on my research and related works</p>
-								</header>
-							</article>
-							<article>
-								<span class="image">
-									<img src="images/pic3.jpg" alt="" />
-								</span>
-								<header class="major">
-									<h3><a href="course notes/homepage.html" class="link">Course Notes</a></h3>
-									<p>Here presents the lesson notes about some courses that I took since undergraduate period</p>
-								</header>
-							</article>
-							<article>
-								<span class="image">
-									<img src="images/pic4.jpg" alt="" />
-								</span>
-								<header class="major">
-									<h3><a href="musical column/homepage.html" class="link">Musical Column</a></h3>
-									<p>Here you will see everthing about my personal music taste,<br /> 
-									including music reviews, annual summaries and appreciation of vinyls, etc</p>
-								</header>
-							</article>
-							<article>
-								<span class="image">
-									<img src="images/pic5.jpg" alt="" />
-								</span>
-								<header class="major">
-									<h3><a href="essays/homepage.html" class="link">Essays</a></h3>
-									<p>Here are some essays that I wrote which marked down my thougts and experiences</p>
-								</header>
-							</article>
-							<article>
-								<span class="image">
-									<img src="images/pic6.jpg" alt="" />
-								</span>
-								<header class="major">
-									<h3><a href="landing.html" class="link">photos&videos</a></h3>
-									<p>This column contains life photos & videos which are precious records of my life</p>
-								</header>
-							</article>
-						</section>
+							<section id="one" >
+								<div class="inner">
+									<header class="major">
+										<h2>Appreciation of New Music</h2>
+										<h3> 新作赏析</h3>
+									</header>
+								</div>
+							</section>
+
+							<section id="one" >
+								<div class="inner">
+									<div class="row">
+										<div class="col-3 col-12-medium">
+											<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+										</div>
+										<div class="col-7 col-12-medium">
+											<h1 align="center">Did You Know That There's a Tunnel Under Ocean Blvd</h1>
+											<h3 align="center">Lana Del Rey</h3>
+											<p align="center">Genre:Pop&emsp;&emsp;&emsp;Release date:2023.01.01</p>
+										</div>
+										<div class="col-2 col-12-medium">
+											<br /><br /><br /><br />
+											<ul class="actions">
+												<li ><a href="generic.html" class="button">Learn more</a></li>
+											</ul>
+										</div>
+									</div>
+								</div>
+							</section>
+
+							<section id="one" >
+								<div class="inner">
+									<h2 align="center">MORE</h2>
+									<div class="row">
+										<div class="col-2 col-12-medium">
+											<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+											<h3 align="center">Did You Know That There's a Tunnel Under Ocean Blvd</h3>
+											<h4 align="center">Lana Del Rey</h4>
+											<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+										</div>
+										<div class="col-2 col-12-medium">
+											<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+											<h3 align="center">Did You Know That There's a Tunnel Under Ocean Blvd</h3>
+											<h4 align="center">Lana Del Rey</h4>
+											<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+										</div>
+										<div class="col-2 col-12-medium">
+											<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+											<h3 align="center">Did You Know That There's a Tunnel Under Ocean Blvd</h3>
+											<h4 align="center">Lana Del Rey</h4>
+											<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+										</div>
+										<div class="col-2 col-12-medium">
+											<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+											<h3 align="center">Did You Know That There's a Tunnel Under Ocean Blvd</h3>
+											<h4 align="center">Lana Del Rey</h4>
+											<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+										</div>
+										<div class="col-2 col-12-medium">
+											<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+											<h3 align="center">Did You Know That There's a Tunnel Under Ocean Blvd</h3>
+											<h4 align="center">Lana Del Rey</h4>
+											<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+										</div>
+										<div class="col-2 col-12-medium">
+											<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+											<h3 align="center">Did You Know That There's a Tunnel Under Ocean Blvd</h3>
+											<h4 align="center">Lana Del Rey</h4>
+											<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+										</div>
+									</div>
+								</div>
+							</section>
+
+						<!-- Two -->
+							<section id="two" >
+								<div class="inner">
+									<header class="major">
+										<h2>Retrospection on released work</h2>
+										<h3>旧作回顾</h3>
+									</header>
+								</div>
+							</section>
+
+							<section id="two" >
+								<div class="inner">
+									<div class="row">
+										<div class="col-3 col-12-medium">
+											<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+										</div>
+										<div class="col-7 col-12-medium">
+											<h1 align="center">Did You Know That There's a Tunnel Under Ocean Blvd</h1>
+											<h3 align="center">Lana Del Rey</h3>
+											<p align="center">Genre:Pop&emsp;&emsp;&emsp;Release date:2023.01.01</p>
+										</div>
+										<div class="col-2 col-12-medium">
+											<br /><br /><br /><br />
+											<ul class="actions">
+												<li ><a href="generic.html" class="button">Learn more</a></li>
+											</ul>
+										</div>
+									</div>
+								</div>
+							</section>
+
+							<section id="one" >
+								<div class="inner">
+									<h2 align="center">MORE</h2>
+									<div class="row">
+										<div class="col-2 col-12-medium">
+											<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+											<h3 align="center">Did You Know That There's a Tunnel Under Ocean Blvd</h3>
+											<h4 align="center">Lana Del Rey</h4>
+											<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+										</div>
+										<div class="col-2 col-12-medium">
+											<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+											<h3 align="center">Did You Know That There's a Tunnel Under Ocean Blvd</h3>
+											<h4 align="center">Lana Del Rey</h4>
+											<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+										</div>
+										<div class="col-2 col-12-medium">
+											<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+											<h3 align="center">Did You Know That There's a Tunnel Under Ocean Blvd</h3>
+											<h4 align="center">Lana Del Rey</h4>
+											<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+										</div>
+										<div class="col-2 col-12-medium">
+											<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+											<h3 align="center">Did You Know That There's a Tunnel Under Ocean Blvd</h3>
+											<h4 align="center">Lana Del Rey</h4>
+											<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+										</div>
+										<div class="col-2 col-12-medium">
+											<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+											<h3 align="center">Did You Know That There's a Tunnel Under Ocean Blvd</h3>
+											<h4 align="center">Lana Del Rey</h4>
+											<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+										</div>
+										<div class="col-2 col-12-medium">
+											<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+											<h3 align="center">Did You Know That There's a Tunnel Under Ocean Blvd</h3>
+											<h4 align="center">Lana Del Rey</h4>
+											<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+										</div>
+									</div>
+								</div>
+							</section>
+
+
+						<!-- Three -->
+							<section id="three">
+								<div class="inner">
+									<div class="row">
+										<div class="col-4 col-12-medium">
+											<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+										</div>
+										<div class="col-8 col-12-medium">
+											<h3>Faucibus consequat lorem</h3>
+											<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+										</div>
+									</div>
+								</div>
+
+									<header class="major">
+										<h2>Massa libero</h2>
+									</header>
+									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
+									<ul class="actions">
+										<li><a href="generic.html" class="button next">Get Started</a></li>
+									</ul>
+								</div>
+								</div>
+							</section>
+
+							<section id="three">
+								<div class="inner">
+									<header class="major">
+										<h2>Massa libero</h2>
+									</header>
+									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
+									<ul class="actions">
+										<li><a href="generic.html" class="button next">Get Started</a></li>
+									</ul>
+								</div>
+							</section>
 
 					</div>
-
-				<!-- Contact -->
-					<section id="contact">
-						<div class="inner">
-							<section>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="6"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Clear" /></li>
-									</ul>
-								</form>
-							</section>
-							<section class="split">
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-envelope"></span>
-										<h3>Email</h3>
-										<a href="#">information@untitled.tld</a>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-phone"></span>
-										<h3>Phone</h3>
-										<span>(000) 000-0000 x12387</span>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-home"></span>
-										<h3>Address</h3>
-										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
-										United States of America</span>
-									</div>
-								</section>
-							</section>
-						</div>
-					</section>
 
 				<!-- Footer -->
 					<footer id="footer">
@@ -196,13 +262,13 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="../assets/js/jquery.min.js"></script>
+			<script src="../assets/js/jquery.scrolly.min.js"></script>
+			<script src="../assets/js/jquery.scrollex.min.js"></script>
+			<script src="../assets/js/browser.min.js"></script>
+			<script src="../assets/js/breakpoints.min.js"></script>
+			<script src="../assets/js/util.js"></script>
+			<script src="../assets/js/main.js"></script>
 
 	</body>
 </html>
